# personalized-aws-features

./: .gitignore  LICENSE.txt  README.md  build_lambda.sh  pyproject.toml
.github/workflows/: lint.yml  terraform.yml  test.yml
src/personalized_aws_features/: cli.py  lambda_function.py
src/personalized_aws_features/core/: display.py  logger.py  processor.py
src/personalized_aws_features/integrations/: bedrock.py  cost_explorer.py  dynamodb.py  rss_feed.py  slack.py
terraform/: cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_app.py  test_display.py  test_logger.py  test_processor.py
